--- a/templates/detail.html
+++ b/templates/detail.html
@@ -6,7 +6,7 @@
 <!-- <link type="text/css" rel="stylesheet" media="all" href="{%static 'css/main.css'%}"> -->
 <link type="text/css" rel="stylesheet" media="all" href="{%static 'css/layout.css'%}">
 <!-- <script src="{%static 'www/js/jquery-1.6.2.js'%}"></script> -->
-<title>TRENOVKR</title>
+<title>JAL</title>
 
 </head>
 <body>
