--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,61 +1,86 @@
 @import 'fonts.css';
 @import 'layout.css';
 
-*{
-  margin: 0;
-  /* color: #fff; */
-  text-decoration: none;
-  /* border-radius: 2px; */
-}
-html,body{
-  height: 100%;
-  margin: 0;
-  padding: 0;
-}
-body{
-  /*为footer提供定位*/
-  position: relative;
-  /* background: #b61b00; */
-}
+*
+  {
+    margin: 0;
+    /* color: #fff; */
+    text-decoration: none;
+    /* border-radius: 2px; */
+  }
+html,body
+  {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+  }
+body
+  {
+    /*为footer提供定位*/
+    position: relative;
+    /* background: #b61b00; */
+  }
 
-div.top{
-  height: 55px;
-  background: #cc1f00;
-  
-  /* border: 2px solid #000; */
-}
-/* * > a{ */
-  /* color: #fff; */
-/* } */
+/* 
+    top_start
+*/
+div.top
+  {
+    height: 55px;
+    /* background: #cc1f00; */
+    border-bottom: 1px solid #000;
+  }
+.nav_focus
+  {
+    border-bottom: 3px solid #ff6666;
+  }
+.clear
+  {
+    clear: both;
+  }
+/* 
+top_end
+*/
 
-div.wrap{
-  min-height: 1000px;
-  /* background: #005028; */
-  /* border: 2px solid #000; 005028*/
-}
+/* 
+wrap-start
+*/
+div.wrap
+  {
+    min-height: 1000px;
+    /* background: #005028; */
+    /* border: 2px solid #000; 005028*/
+  }
+/* 
+wrap-end
+*/
 
-footer{
-  /*相对body定位*/
-  /* position: absolute; */
-  /* bottom: 0px; */
-  /* left: -4px; */
-  width: 100%;
-  min-height: 150px;
-  margin: 10px 0 0 0;
-  padding: 0;
-  background: #cc1f00;
-  /* border: 2px solid #000; */
-}
-footer > *, footer > * > a{
-  color: #fff;
-}
+/* 
+footer-start
+*/
+footer
+  {
+    /*相对body定位*/
+    /* position: absolute; */
+    /* bottom: 0px; */
+    /* left: -4px; */
+    width: 100%;
+    min-height: 150px;
+    margin: 10px 0 0 0;
+    padding: 0;
+    /* background: #cc1f00; */
+    border-top: 1px solid #000;
+  }
 
-.nav_focus{
-  border-bottom: 3px solid #ff6666;
-}
-.clear{
-  clear: both;
-}
+footer > *, footer > * > a
+  {
+    color: #fff;
+  }
+/* 
+footer-end
+*/
+
+
 
 
 
