--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -1,81 +1,104 @@
-
-div.nav{
-  width: 1280px;
-  height: 55px;
-  margin: 0 auto;
-}
-
-div.nav > div{
-  float: left;
-  line-height: 55px;
-  margin-right: 30px;
-  margin-left: 5px;
-  font-family: 'wendy one';
-  src: url(/static/fonts/WendyOne-Regular.ttf);
-}
-a.trenovkr_logo > h1{
-  display: block;
-  font-family: 'wendy one';
-  color: #fff;
-}
-div.Project > div{
-  /* margin-left: 20px; */
-  min-width: 150xp;
-  padding: 0 15px;
-}
-div.Project > div > h3 > a{
-  color: #fff;
-}
-div.nav > div:last-child{/*购物车*/
-  float: right;
-  width: 100px;
-  text-align: right;
-  margin-right: 5px;
-}
-
-div.worth{
-  width: 1280px;
-  margin: 0 auto;
-  /* overflow: hidden; */
-}
-div.worth > div{
-  margin: 5px;
-  background: rgb(250, 255, 247);
-  margin: 5px;
-  min-height: 200px;
-}
+/* 
+nav-start
+*/
+.nav
+  {
+    width: 1280px;
+    height: 55px;
+    margin: 0 auto;
+  }
+.nav > div
+  {
+    float: left;
+    line-height: 55px;
+    margin-right: 30px;
+    margin-left: 5px;
+  }
+.nav > div:last-child
+  {/*购物车*/
+    float: right;
+    width: 100px;
+    text-align: right;
+    margin-right: 5px;
+  }
+.app > div
+  {
+    /* margin-left: 20px; */
+    min-width: 150xp;
+    padding: 0 15px;
+  }
 
 
-.flex_container{
-  display: flex;
-  /* flex-wrap: wrap; */
-  flex-direction: row;
-  /* flex-shrink: 0; */
-  /* justify-content: flex-start; */
-}
-.flex_container > div{  
-  width: 100%;
-  /* display: inline-block; */
-}
+/* 
+container-start
+*/
+.card-standard
+  {
+    width: 1280px;
+    margin: 0 auto;
+    /* overflow: hidden; */
+  }
+.card-large
+  {
+    width: 100%;
+    margin: 0 auto;
+  }
+.card-4
+  {
+    width: 24%;
+    min-height: 150px;
+    margin-top: 15px;
+    border: #000 solid 1px;
+  }
+.card-3
+  {
+    width: 30%;
+    min-height: 150px;
+    border: #000 solid 1px;
+  }
+.container-standard
+  {
+    width: 1280px;
+    border-top: solid 1px #000;
+    margin: 0 auto;
+  }
+.flex_container
+  {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    /* flex-shrink: 0; */
+    /* justify-content: flex-start; */
+    justify-content: space-between;
+  }
+.flex_container > div
+  {  
+    /* width: 100%; */
+    /* display: inline-block; */
+    border-left: #000 solid 1px;
+    /* line-height: 100%; */
+  }
+  /* 
+  container-end
+  */
 
-footer > div{
-  /* border: solid 1px #000; */
-  width: 1280px;
-  /* min-height: 300px; */
-  margin: 0 auto;
-  padding: 0 10px;
-}
-footer > div > div{
-  overflow: hidden;
-}
+  /* 
+  footer-start
+  */
 
-footer > div > div > ul{
-  float: left;
-  padding: 0;
-  margin-right: 60px;
-  /* border: solid 1px #000; */
-}
-footer > div > div > ul >li{
-  list-style: none;
-  padding: 0;
-}
+footer > div > div
+  {
+    overflow: hidden;
+  }
+footer > div > div > ul
+  {
+    float: left;
+    padding: 0;
+    margin-right: 60px;
+    /* border: solid 1px #000; */
+  }
+footer > div > div > ul >li
+  {
+    list-style: none;
+    padding: 0;
+  }
