--- a/templates/index.html
+++ b/templates/index.html
@@ -14,11 +14,11 @@
     <div class="top">
         <div class="nav">
             <div>
-                <a class="trenovkr_logo" href="">
+                <a class="" href="">
                     <h1>JAL</h1>
                 </a>
             </div>
-            <div class="Project flex_container">
+            <div class="app flex_container">
                 <div><h3><a href="{{ url.0 }}">{{ appTitle.0 }}</a></h3></div>
                 <div><h3><a href="{{ url.1 }}">{{ appTitle.1 }}</a></h3></div>
                 <div><h3><a href="{{ url.2 }}">{{ appTitle.2 }}</a></h3></div>
@@ -39,21 +39,10 @@
                 
             </div>
         </div> -->
-        <div class="worth">
+        <div class="card-standard">
             {%for i in imagesName.1%}
             <div><img width="100%" src="{{i}}" alt=""></div>
             {%endfor%}
-        </div>
-
-        <div class="worth flex_container">
-            <div><img width="100%" src="{%static '/image/trenovkr/img/1.png'%}" alt=""></div>
-            <div><img width="100%" src="{%static '/image/trenovkr/img/2.png'%}" alt=""></div>
-        </div>
-        
-        <div class="worth flex_container">
-            <div><img width="100%" src="{%static '/image/trenovkr/img/1.png'%}" alt=""></div>
-            <div><img width="100%" src="{%static '/image/trenovkr/img/2.png'%}" alt=""></div>
-            <div><img width="100%" src="{%static '/image/trenovkr/img/3.png'%}" alt=""></div>
         </div>
 
         <div class="worth flex_container">
