--- a/templates/index.html
+++ b/templates/index.html
@@ -39,30 +39,20 @@
                 
             </div>
         </div> -->
-        <div class="card-standard">
-            {%for i in imagesName.1%}
-            <div><img width="100%" src="{{i}}" alt=""></div>
-            {%endfor%}
+        <div class="container-standard">
+            <!-- {%for i in imagesName.1%} -->
+            <div class="card-standard"><img width="100%" src="{{i}}" alt="" /></div>
+            <!-- {%endfor%} -->
         </div>
 
-        <div class="worth flex_container">
-            {%for i in imagesName.0%}
-            <div><img width="100%" src="{{i}}" alt=""></div>
-            {%endfor%}
-        </div>
 
-        <div class="worth flex_container">
-            {%for i in imagesName.2%}
-            <div><img width="100%" src="{{i}}" alt=""></div>
-            {%endfor%}
-        </div>
         
     </div>
     
 
 
     <footer>
-        <div class="container footer">
+        <div class="container-standard footer">
             <div>
                 <ul>
                     <li><strong>Servies</strong></li>
