--- a/templates/products.html
+++ b/templates/products.html
@@ -14,16 +14,16 @@
     <div class="top">
         <div class="nav">
             <div>
-                <a class="" href="">
-                    <h1>JAL</h1>
+                <a class="" href="{{ url.0 }}">
+                    <h1>{{ appTitle.0 }}</h1>
                 </a>
             </div>
             <div class="app flex_container">
-                <div><h3><a href="{{ url.0 }}">{{ appTitle.0 }}</a></h3></div>
                 <div><h3><a href="{{ url.1 }}">{{ appTitle.1 }}</a></h3></div>
                 <div><h3><a href="{{ url.2 }}">{{ appTitle.2 }}</a></h3></div>
                 <div><h3><a href="{{ url.3 }}">{{ appTitle.3 }}</a></h3></div>
                 <div><h3><a href="{{ url.4 }}">{{ appTitle.4 }}</a></h3></div>
+                <div><h3><a href="{{ url.5 }}">{{ appTitle.5 }}</a></h3></div>
             </div>
             <div><a href="">BAG</a></div>
         </div>
@@ -31,14 +31,14 @@
 
     <div class="wrap">
         <div class="container-standard flex_container">
-            <div class="card-2">img</div>
-            <div class="card-2">img</div>
-            <div class="card-2">img</div>
-            <div class="card-2">img</div>
-            <div class="card-2">img</div>
-            <div class="card-2">img</div>
-            <div class="card-2">img</div>
-            <div class="card-2">img</div>
+            <div class="card-3">img</div>
+            <div class="card-3">img</div>
+            <div class="card-3">img</div>
+            <div class="card-3">img</div>
+            <div class="card-3">img</div>
+            <div class="card-3">img</div>
+            <div class="card-3">img</div>
+            <div class="card-3">img</div>
         </div>
     </div>
 
