--- a/static/css/main.css
+++ b/static/css/main.css
@@ -24,7 +24,7 @@ body
 /* 
     top_start
 */
-div.top
+.top
   {
     height: 55px;
     /* background: #cc1f00; */
@@ -45,13 +45,15 @@ top_end
 /* 
 wrap-start
 */
-div.wrap
+.wrap
   {
-    min-height: 1000px;
+    width: 100%;
+    min-height: 600px;
     /* background: #005028; */
     /* border: 2px solid #000; 005028*/
   }
-/* 
+
+/* 3
 wrap-end
 */
 
@@ -77,6 +79,9 @@ footer-end
 */
 
 
-
+.no-margin
+  {
+    margin: 0;
+  }
 
 
