--- a/templates/detail.html
+++ b/templates/detail.html
@@ -14,16 +14,16 @@
     <div class="top">
         <div class="nav">
             <div>
-                <a class="" href="">
-                    <h1>JAL</h1>
+                <a class="" href="{{ url.0 }}">
+                    <h1>{{ appTitle.0 }}</h1>
                 </a>
             </div>
             <div class="app flex_container">
-                <div><h3><a href="{{ url.0 }}">{{ appTitle.0 }}</a></h3></div>
                 <div><h3><a href="{{ url.1 }}">{{ appTitle.1 }}</a></h3></div>
                 <div><h3><a href="{{ url.2 }}">{{ appTitle.2 }}</a></h3></div>
                 <div><h3><a href="{{ url.3 }}">{{ appTitle.3 }}</a></h3></div>
                 <div><h3><a href="{{ url.4 }}">{{ appTitle.4 }}</a></h3></div>
+                <div><h3><a href="{{ url.5 }}">{{ appTitle.5 }}</a></h3></div>
             </div>
             <div><a href="">BAG</a></div>
         </div>
@@ -32,25 +32,29 @@
 
     <div class="wrap">
         <!-- 产品图片及价格信息 -->
-        <div class="flex_container container-standard">
-            <!-- 产品图片 -->
-            <div><a href=""><img src="" alt=""></a></div>
-            <!-- 价格信息 -->
-            <div>
-                <!-- 标题 -->
+        <div class="container-standard flex_container">
+            <div class="card-2">
+                <img src="" alt="" />
+            </div>
+            <div class="card-2">
+                <div><h1>title</h1></div>
+                <div>$<span>price</span></div>
                 <div>
-                    <h1>title</h1>
-                </div>
-                <!-- 价格 -->
-                <div>
-                    <span>price</span>
-                </div>
-                <!-- 简介 -->
-                <div>
-                    <p>discription</p>
+                    <ul>
+                        <li><p>point-01</p></li>
+                    </ul>
                 </div>
             </div>
         </div>
+
+        <div class="container-standard">
+            <div><h3>Discription</h3></div>
+            <div>
+                <p>text</p>
+            </div>
+            <div class="card-standard">img</div>
+        </div>
+
     </div>
 
     <!-- A+描述 -->
