--- a/templates/products.html
+++ b/templates/products.html
@@ -31,14 +31,21 @@
 
     <div class="wrap">
         <div class="container-standard flex_container">
-            <div class="card-3">img</div>
-            <div class="card-3">img</div>
-            <div class="card-3">img</div>
-            <div class="card-3">img</div>
-            <div class="card-3">img</div>
-            <div class="card-3">img</div>
-            <div class="card-3">img</div>
-            <div class="card-3">img</div>
+            <div class="card-3">
+                <div><img src="" alt=""></div>
+                <div><h3>title</h3></div>
+                <div>$<span>price</span></div>
+            </div>
+            <div class="card-3">
+                <div><img src="" alt=""></div>
+                <div><h3>title</h3></div>
+                <div>$<span>price</span></div>
+            </div>
+            <div class="card-3">
+                <div><img src="" alt=""></div>
+                <div><h3>title</h3></div>
+                <div>$<span>price</span></div>
+            </div>
         </div>
     </div>
 
