--- a/templates/detail.html
+++ b/templates/detail.html
@@ -37,8 +37,8 @@
                 <img src="" alt="" />
             </div>
             <div class="card-2">
-                <div><h1>title</h1></div>
-                <div>$<span>price</span></div>
+                <div><h1>{{ asin }}</h1></div>
+                <div>$<span>{{ asin.name }}</span></div>
                 <div>
                     <ul>
                         <li><p>point-01</p></li>
