--- a/templates/detail.html
+++ b/templates/detail.html
@@ -34,7 +34,9 @@
         <!-- 产品图片及价格信息 -->
         <div class="container-standard flex_container">
             <div class="card-2">
-                <img src="" alt="" />
+                <div>
+                    <img src="{%static 'image/test01.png'%}" alt="" />
+                </div>
             </div>
             <div class="card-2">
                 <div><h1>{{ listing.0 }}</h1></div>
