--- a/templates/index.html
+++ b/templates/index.html
@@ -35,7 +35,9 @@
         <div class="container-standard">
 
             <div class="card-standard no-margin">
-                img
+                <div>
+                    <img src="{%static 'image/trenovkr/img/newRelease/1800.jpg'%}" alt="" />
+                </div>
             </div>
 
         </div>
