--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -2,105 +2,114 @@
 nav-start
 */
 .nav
-  {
-    width: 1280px;
-    height: 55px;
-    margin: 0 auto;
-  }
+{
+  width: 1280px;
+  height: 55px;
+  margin: 0 auto;
+}
 .nav > div
-  {
-    float: left;
-    line-height: 55px;
-    margin-right: 30px;
-    margin-left: 5px;
-  }
+{
+  float: left;
+  line-height: 55px;
+  margin-right: 30px;
+  margin-left: 5px;
+}
 .nav > div:last-child
-  {/*购物车*/
-    float: right;
-    width: 100px;
-    text-align: right;
-    margin-right: 5px;
-  }
+{/*购物车*/
+  float: right;
+  width: 100px;
+  text-align: right;
+  margin-right: 5px;
+}
 .app > div
-  {
-    /* margin-left: 20px; */
-    min-width: 150xp;
-    padding: 0 15px;
-  }
+{
+  /* margin-left: 20px; */
+  min-width: 150xp;
+  padding: 0 15px;
+}
 
 
 /* 
 container-start
+负责页面横向显示区域边界，通用宽度1280px
+所有card模块，在本区域内展示
 */
 .container-standard
-  {
-    width: 1280px;
-    min-height: 150px;
-    border-top: solid 1px #000;
-    margin: 0 auto;
-  }
+{
+  width: 1280px;
+  min-height: 150px;
+  border-top: solid 1px #000;
+  margin: 0 auto;
+}
 .container-standard > div
-  {
-    border: #000 1px solid;
-  }
-.container-standard > div > div > img
-  {
-    height: 150px;
+{
+  border: #000 1px solid;
+}
 
-  }
+/* 
+负责产品展示，营销画面等。有banner、2、3、4列4种模式布局。 
+所有img标签在此card元素内
+*/
 .card-standard
-  {
-    max-width: 100%;
-    min-height: 150px;
-    /* overflow: hidden; */
-  }
+{
+  max-width: 100%;
+  min-height: 150px;
+  /* overflow: hidden; */
+}
 .card-2
-  {
-    width: 49.845%;
-    min-height: 150px;
-  }
+{
+  width: 49.845%;
+  min-height: 150px;
+}
 .card-3
-  {
-    width: 33.16%;
-    min-height: 150px;
-  }
+{
+  /* width: 33.16%; */
+  width: 32.66%;
+  min-height: 150px;
+}
 .card-4
-  {
-    width: 24%;
-    min-height: 150px;
-    margin-top: 15px;
-  }
+{
+  width: 24%;
+  min-height: 150px;
+  margin-top: 15px;
+}
+.card-2 > div > img, .card-3 > div > img, .card-4 > div > img, .card-standard > div > img
+{
+  min-height: 150px;
+  width: 100%;
+}
+
 
 .flex_container
-  {
-    display: flex;
-    flex-wrap: wrap;
-    /* flex-direction: row; */
-    /* flex-shrink: 0; */
-    /* justify-content: flex-start; */
-    justify-content: space-between;
-  }
+{
+  display: flex;
+  flex-wrap: wrap;
+  /* flex-direction: row; */
+  /* flex-shrink: 0; */
+  /* justify-content: flex-start; */
+  justify-content: space-between;
+}
 
-  /* 
-  container-end
-  */
+/* 
+container-end
+*/
 
-  /* 
-  footer-start
-  */
+/* 
+footer-start
+*/
 footer > div > div
-  {
-    overflow: hidden;
-  }
+{
+  overflow: hidden;
+}
 footer > div > div > ul
-  {
-    float: left;
-    padding: 0;
-    margin-right: 60px;
-    /* border: solid 1px #000; */
-  }
+{
+  float: left;
+  padding: 0;
+  margin-right: 60px;
+  /* border: solid 1px #000; */
+}
 footer > div > div > ul >li
-  {
-    list-style: none;
-    padding: 0;
-  }
+{
+  list-style: none;
+  padding: 0;
+}
