--- a/templates/products.html
+++ b/templates/products.html
@@ -32,13 +32,13 @@
     <div class="wrap">
         <div class="container-standard flex_container">
             <div class="card-3">
-                <div><img src="{{ product_img.0 }}" alt=""></div>
-                <div><h3>{{ product_title.0 }}</h3></div>
+                <div><img src="{{ productInfo.B09YLLXKDT.img }}" alt=""></div>
+                <div><h3>{{ productInfo.B09YLLXKDT.ProductTitle }}</h3></div>
                 <div>$<span>price</span></div>
             </div>
             <div class="card-3">
-                <div><img src="{%static 'image/test02.png'%}" alt=""></div>
-                <div><h3>{{ product_title.1 }}</h3></div>
+                <div><img src="{{ productInfo.B09YLKWBMV.img }}" alt=""></div>
+                <div><h3>{{ productInfo.B09YLKWBMV.ProductTitle }}</h3></div>
                 <div>$<span>price</span></div>
             </div>
             <div class="card-3">
