--- a/templates/products.html
+++ b/templates/products.html
@@ -32,18 +32,18 @@
     <div class="wrap">
         <div class="container-standard flex_container">
             <div class="card-3">
-                <div><img src="{{ productInfo.B09YLLXKDT.img }}" alt=""></div>
-                <div><h3>{{ productInfo.B09YLLXKDT.ProductTitle }}</h3></div>
+                <div><a href=""><img src="{{ productInfo.0.img }}" alt=""></a></div>
+                <div><a href=""><h3>{{ productInfo.0.ProductTitle }}</h3></a></div>
                 <div>$<span>price</span></div>
             </div>
             <div class="card-3">
-                <div><img src="{{ productInfo.B09YLKWBMV.img }}" alt=""></div>
-                <div><h3>{{ productInfo.B09YLKWBMV.ProductTitle }}</h3></div>
+                <div><a href=""><img src="{{ productInfo.1.img }}" alt=""></a></div>
+                <div><a href=""><h3>{{ productInfo.1.ProductTitle }}</h3></a></div>
                 <div>$<span>price</span></div>
             </div>
             <div class="card-3">
-                <div><img src="{%static 'image/trenovkr/img/newRelease/1800.jpg'%}" alt=""></div>
-                <div><h3>{{ product_title.2 }}</h3></div>
+                <div><a href=""><img src="{{ productInfo.2.img }}" alt=""></a></div>
+                <div><a href=""><h3>{{ productInfo.2.ProductTitle }}</h3></a></div>
                 <div>$<span>price</span></div>
             </div>
         </div>
