--- a/templates/index.html
+++ b/templates/index.html
@@ -33,10 +33,23 @@
     <div class="wrap">
 
         <div class="container-standard">
-
-            <div class="card-standard no-margin">
+            <div class="card-standard no-margin min-height" style="background-image: url('{{ imgShow.1 }}'); background-size: 100%;">
                 <div>
-                    <img src="{%static 'image/trenovkr/img/newRelease/1800.jpg'%}" alt="" />
+                    
+                </div>
+            </div>
+
+            
+
+            <div class="card-standard no-margin min-height" style="background-image: url('{{ imgShow.2 }}'); background-size: cover;">
+                <div>
+                    
+                </div>
+            </div>
+
+            <div class="card-standard no-margin min-height" style="background-image: url('{{ imgShow.0 }}');">
+                <div>
+                    
                 </div>
             </div>
 
@@ -53,6 +66,7 @@
             <div>
                 <ul>
                     <li><strong>Servies</strong></li>
+                    <li><p><a href="">Me and Mr. Leo</a></p></li>
                     <li><p><a href="">Trenovkr</a></p></li>
                     <li><p><a href="">BOBODOO</a></p></li>
                 </ul>
