--- a/templates/products.html
+++ b/templates/products.html
@@ -32,17 +32,17 @@
     <div class="wrap">
         <div class="container-standard flex_container">
             <div class="card-3">
-                <div><a href=""><img src="{{ productInfo.0.img }}" alt=""></a></div>
+                <div><a href="{{ productInfo.url.0 }}"><img src="{{ productInfo.0.img }}" alt=""></a></div>
                 <div><a href=""><h3>{{ productInfo.0.ProductTitle }}</h3></a></div>
                 <div>$<span>price</span></div>
             </div>
             <div class="card-3">
-                <div><a href=""><img src="{{ productInfo.1.img }}" alt=""></a></div>
+                <div><a href="{{ productInfo.url.1 }}"><img src="{{ productInfo.1.img }}" alt=""></a></div>
                 <div><a href=""><h3>{{ productInfo.1.ProductTitle }}</h3></a></div>
                 <div>$<span>price</span></div>
             </div>
             <div class="card-3">
-                <div><a href=""><img src="{{ productInfo.2.img }}" alt=""></a></div>
+                <div><a href="{{ productInfo.url.2 }}"><img src="{{ productInfo.2.img }}" alt=""></a></div>
                 <div><a href=""><h3>{{ productInfo.2.ProductTitle }}</h3></a></div>
                 <div>$<span>price</span></div>
             </div>
