--- a/templates/detail.html
+++ b/templates/detail.html
@@ -35,7 +35,7 @@
         <div class="container-standard flex_container">
             <div class="card-2">
                 <div>
-                    <a href=""><img src="{{ asin.listingImg }}" alt="" /></a>
+                    <img src="{{ asin.listingImg }}" alt="" />
                 </div>
             </div>
             <div class="card-2">
