--- a/templates/detail.html
+++ b/templates/detail.html
@@ -6,7 +6,7 @@
 <link type="text/css" rel="stylesheet" media="all" href="{%static 'css/main.css'%}">
 <link type="text/css" rel="stylesheet" media="all" href="{%static 'css/layout.css'%}">
 <!-- <script src="{%static 'www/js/jquery-1.6.2.js'%}"></script> -->
-<title>JAL</title>
+<title>{{ appTitle.0 }}</title>
 
 </head>
 <body>
@@ -54,7 +54,7 @@
         </div>
 
         <div class="container-standard">
-            <div><h3>Description</h3></div>
+            <div><h3>{{ test }}</h3></div>
             <div>
                 <p>{{ asin.Description }}</p>
             </div>
