--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,9 @@
 <link type="text/css" rel="stylesheet" media="all" href="{%static 'css/layout.css'%}">
 <link type="text/css" rel="stylesheet" media="all" href="{%static 'css/position.css'%}">
 <script src="{%static 'js/jquery-1.6.2.js'%}"></script>
+<script src="{%static 'js/lfeng.js'%}"></script>
+
+
 <title>{{ appTitle.0 }}</title>
 
 </head>
@@ -31,8 +34,9 @@
         </div>
     </div>
     
-    <div class="wrap" style = "{{ styles.B09YLLXKDT }}">
+    <div id="B09YLLXKDT" class="wrap" style = "{{ styles.B09YLLXKDT }}">
         
+
         <div class="container-standard">
 
             <div class="card-standard no-margin min-height">
@@ -53,7 +57,7 @@
     
     </div>
     
-    <div class="wrap" style="{{ styles.B09YLKWBMV }}">
+    <div id="B09YLKWBMV" class="wrap" style="{{ styles.B09YLKWBMV }}">
 
         <div class="container-standard">
 
@@ -74,7 +78,7 @@
         </div>
     </div>
     
-    <div class="wrap" style="{{ styles.B09KG4R3YR }}');">
+    <div id="B09KG4R3YR" class="wrap" style="{{ styles.B09KG4R3YR }}');">
 
         <div class="container-standard">
 
