--- a/templates/detail.html
+++ b/templates/detail.html
@@ -25,7 +25,7 @@
                 <div><h3><a href="{{ url.4 }}">{{ appTitle.4 }}</a></h3></div>
                 <div><h3><a href="{{ url.5 }}">{{ appTitle.5 }}</a></h3></div>
             </div>
-            <div><a href="">BAG</a></div>
+            <div><a href="{{ url.6 }}">Login</a></div>
         </div>
     </div>
 
