--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -115,6 +115,42 @@ widget
   background-color: rgb(126, 197, 149, 0.9);
 }
 
+
+/* 
+form-login-signUp
+*/
+.login, .signUp
+{
+  width: 80%;
+  min-height: 60%;
+  margin: 0 auto;
+  border: #333 solid 1px;
+}
+.login > ul
+{
+  width:30%; border: #000 solid 1px; margin: 30px 35%; padding: 30px 0;
+}
+.login > ul > li
+{
+  width:60%; height: 35px; margin: 5px 20%; list-style: none; padding-left: 0;
+}
+.login > ul > li > input[type="input"]
+{
+  border: 1px solid #000; width:97%; height: 30px; background-color: #fff; color: #666; text-align: center;
+}
+.login > ul > li > input[type="input"]:focus
+{
+  outline: none; border-bottom: 1px solid #000; border-top: none; border-left: none; border-right: none; width:97%; height: 30px; background-color: #f5f5f5;
+}
+.login > ul > li > input[type="submit"]
+{
+  width: 100%;
+  height: 35px;
+  border-bottom: 1px solid #000;
+  background-color: rgba(126, 197, 149, 0.8);
+  box-shadow: none;
+}
+
 /* 
 footer-start
 */
