--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -154,8 +154,8 @@ form-login-signUp
   height: 35px; 
   background-color: #fff;
   border: 1px solid #ccc; 
-  color: #666; 
-  text-align: center;
+  color: #aaa; 
+  /* text-align: center; */
 }
 .login > ul > li > input[type="text"]:focus
 {
