--- a/templates/index.html
+++ b/templates/index.html
@@ -34,7 +34,7 @@
         </div>
     </div>
     
-    <div id="B09YLLXKDT" class="wrap" style = "{{ styles.B09YLLXKDT }}">
+    <div id="B09YLLXKDT" class="wrap" style="{{ styles.B09YLLXKDT }}">
         
         <div class="position">
             <div>
@@ -68,7 +68,7 @@
 
     </div>
     
-    <div id="B09KG4R3YR" class="wrap" style="{{ styles.B09KG4R3YR }}');">
+    <div id="B09KG4R3YR" class="wrap" style="{{ styles.B09KG4R3YR }}">
 
         <div class="position">
             <div>
@@ -88,7 +88,7 @@
 
         <div class="container-standard">
 
-            <div class="card-standard no-margin min-height" style="{{ styles.B09KG4R3YR }}');">
+            <div class="card-standard no-margin min-height" style="{{ styles.B09KG4R3YR }}">
                 <div class="position">
                     <div>
                         <h1>CLOUD KEY HOLDER</h1>
