--- a/templates/login.html
+++ b/templates/login.html
@@ -45,10 +45,12 @@
                 <ul>
                     <!-- <label for="test">Your name: </label> -->
                     <li>
-                        <input id="account" type="text" name="account" value="YOUR EMAIL" onclick="loginControl('accountClick')" onblur="loginControl('accountOnblur')">
+                        <input id="account" type="text" name="account" value="YOUR EMAIL" onclick="loginControl('accountClick')">
+                        <!-- <input id="account" type="text" name="account" value="YOUR EMAIL" onclick="loginControl('accountClick')" onblur="loginControl('accountOnblur')"> -->
                     </li>
                     <li>
-                        <input id="passWord" type="text" name="passWord" value="PASSWORD" onclick="loginControl('passWordClick')" onblur="loginControl('passWordOnblur')">
+                        <input id="passWord" type="text" name="passWord" value="PASSWORD" onclick="loginControl('passWordClick')">
+                        <!-- <input id="passWord" type="text" name="passWord" value="PASSWORD" onclick="loginControl('passWordClick')" onblur="loginControl('passWordOnblur')"> -->
                     </li>
                     <li>
                         <!-- <input type="submit" value="{{ appTitle.6 }}"> -->
